--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@ nav {
 
 img {
     width: 100%;
+    height: 100%;
+    max-height: 50vh;
+    padding: 20px;
 }
 
 .nav__container {
@@ -78,11 +81,15 @@ header {
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
 
-.undraw__pic {
-    margin-top: 100px;
+.header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 
 h1 {
     font-size: 56px;
@@ -96,3 +103,25 @@ h2 {
     margin-bottom: 32px;
     text-align: center;
 }
+
+button {
+    cursor: pointer;
+}
+
+button.active {
+    transform: translateY(1px);
+}
+
+.btn {
+    background-color: #7342d6;
+    color: white;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+    border: none;
+}
+
+.header__img--wrapper {
+    padding: 20px;
+}
+
