--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,18 @@ button.active {
     padding: 20px;
 }
 
+.container{
+    padding: 56px 0; 
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+/*
+
+HIGHLIGHTS
+
+*/ 
+
